Next release:
mod: genet-diff is replaced by subcommand diff of genet